--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -7,10 +7,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
-      - name: Get changed files
+      - name: Get specific changed files
+        id: changed-files-specific
+        uses: tj-actions/changed-files@v29
+        with:
+          files: |
+            sql/**
+      - name: List all changed files
         id: changed-files
         uses: tj-actions/changed-files@v29
-      - name: List all changed files
         run: |
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "$file was changed"
