--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -16,6 +16,6 @@ jobs:
       - name: List all changed files
         id: changed-files
         run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+          for file in ${{ steps.changed-files-specific.outputs.all_changed_files }}; do
             echo "$file was changed"
           done
