--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,8 +1,14 @@
 name: GitHub Actions Demo
 on: [push]
+env:
+  AWS_ROLE_ARN: arn:aws:iam::054197611072:role/test-github-actions
+  AWS_REGION: ap-northeast-1 
 jobs:
   diff:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - uses: actions/checkout@v3
         with:
@@ -19,3 +25,11 @@ jobs:
           for file in ${{ steps.changed-files-specific.outputs.all_changed_files }}; do
             echo "$file was changed"
           done
+      - name: Configure AWS credentials from IAM Role
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ env.AWS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Run AWS CLI
+        run: |
+          aws s3 ls
