--- a/.github/workflows/branch_name.yaml
+++ b/.github/workflows/branch_name.yaml
@@ -10,7 +10,7 @@ jobs:
           fetch-depth: 2
       -
         name: Test
-        run: ::set-output name=branch::${GITHUB_REF_NAME//\//_}
+        run: echo ::set-output name=branch::${GITHUB_REF_NAME//\//_}
         id: get_branch_name
       -
         name: Output Test
