--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -7,14 +7,9 @@ jobs:
       matrix:  
         directory:  
           - manualsql  
-          - sql  
-    permissions:
-      id-token: write
-      contents: read
-    outputs:  
-      matrix: ${{ steps.set-matrix.outputs.matrix }}  
+          - sql
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 2
       - name: Get specific changed files
@@ -22,26 +17,17 @@ jobs:
         uses: tj-actions/changed-files@v40.2.2
         with:
           files: |
-            manualsql/**
-      - name: List all changed files
+            ${{ matrix.directory }}/**
+      - name: Condition
+        if: steps.changed-files-specific.outputs.any_changed == 'false'
+        run: |
+          echo "No changed"
+          exit 0
+
+      - name: terraform plan
         id: changed-files
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
-          for file in ${{ steps.changed-files-specific.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
-      - name: Run AWS CLI
-        run: |
-          for file in ${{ steps.changed-files-specific.outputs.all_changed_files }}; do
-            echo '{ "filePath": "$file" }'
-          done
-      - name: Determine changed directories  
-        id: set-matrix  
-        run: |  
-          echo "::set-output name=matrix::$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | \
-          grep -E '^(Alice|Bob)/' | awk -F/ '{print $1}' | sort -u | jq -R -s -c 'split("\n")[:-1]')"  
-      - name: Terraform Init and Plan  
-        run: |
-          echo ${{ steps.set-matrix.outputs.matrix }}
-          echo ${{ matrix.directory }}
-          echo ${{github.event.before}}
-          echo ${{github.event.after}}
+          echo "terraform plan"
+          ls -la
+        working-directory: ${{ matrix.directory }}
