--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -31,3 +31,9 @@ jobs:
           echo "terraform plan"
           ls -la
         working-directory: ${{ matrix.directory }}
+
+      - name: access repository variables
+        run: |
+          echo "${vars.HOGE}"
+          echo "${{ vars.HOGE }}"
+        working-directory: ${{ matrix.directory }}
