--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,18 +1,76 @@
-name: GitHub Actions Demo
-on: [push]
+name: Sandbox Actions
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
+
 jobs:
-  diff:
+  check_for_changes:
+    runs-on: ubuntu-latest
+    outputs:
+      changes_in_sql: ${{ steps.filter_changes.outputs.changes_in_sql }}
+      changes_in_root: ${{ steps.filter_changes.outputs.changes_in_root }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: 0
+
+      - name: Detect changes
+        id: filter_changes
+        run: |
+          git fetch origin master
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            DIFF_CMD="git diff --name-only origin/master...HEAD"
+          elif [[ "${{ github.event_name }}" == "push" ]]; then
+            DIFF_CMD="git diff --name-only HEAD^ HEAD"
+          fi
+          CHANGES_IN_sql=$($DIFF_CMD -- 'sql/' | head -n 1)
+          CHANGES_IN_ROOT=$($DIFF_CMD -- '.github/run.yaml' '.github/actions/setup/action.yaml' 'fuga.sql' | head -n 1)
+          echo "changes_in_sql=$CHANGES_IN_sql" >> "$GITHUB_OUTPUT"
+          echo "changes_in_root=$CHANGES_IN_ROOT" >> "$GITHUB_OUTPUT"
+
+  plan:
+    needs: check_for_changes
     runs-on: ubuntu-latest
     steps:
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: |
-            whoami
-            ls -la
+      - name: Checkout the repository
+        uses: actions/checkout@v4.1.1
 
+      - name: Setup
+        id: setup
+        uses: ./.github/actions/setup
+        with:
+          changes_in_sql: ${{ needs.check_for_changes.outputs.changes_in_sql }}
+          changes_in_root: ${{ needs.check_for_changes.outputs.changes_in_root }}
+
+      - name: Plamn
+        if: steps.setup.outputs.skip != 'true'
+        run: echo "SQL Plan"
+
+  apply:
+    if: github.ref == 'refs/heads/master'
+    needs:
+      - check_for_changes
+      - plan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4.1.1
+
+      - name: Setup
+        id: setup
+        uses: ./.github/actions/setup
+        with:
+          changes_in_sql: ${{ needs.check_for_changes.outputs.changes_in_sql }}
+          changes_in_root: ${{ needs.check_for_changes.outputs.changes_in_root }}
+
+      - name: Run
+        if: steps.setup.outputs.skip != 'true'
+        run: echo "Run SQL"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
