--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -20,6 +20,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
       - name: Detect changes
         id: filter_changes
         run: |
