--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -91,7 +91,11 @@ jobs:
           echo "${{github.ref}}"
           echo "${GITHUB_REF#refs/heads/}"
           echo "${{github.head_ref}}"
-
+          if [[ ${{github.head_ref}} =~ (cache/)+ ]]; then
+            OPTION="-detailed-exitcode"
+          fi
+          
+          echo "terraform plan $OPTION"
   apply:
     if: github.ref == 'refs/heads/main'
     needs:
