--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -33,9 +33,18 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Restore cache sql file
+        id: cache-sql-file
+        uses: actions/cache/restore@v4.0.0
+        with:
+          path: "*.sql"
+          key: sql-${{ hashFiles('*.sql') }}
+          restore-keys: |
+            sql-${{ hashFiles('*.sql') }}
+
       - name: Restore cache sql directory
         id: cache-sql
-        uses: actions/cache/restore@v3.3.2
+        uses: actions/cache/restore@v4.0.0
         with:
           path: sql/
           key: sql-${{ hashFiles('sql/') }}
@@ -44,7 +53,7 @@ jobs:
 
       - name: Restore cache root
         id: cache-root
-        uses: actions/cache/restore@v3.3.2
+        uses: actions/cache/restore@v4.0.0
         with:
           path: |
             .github/actions/setup/action.yaml
@@ -106,7 +115,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v4.0.0
 
       - name: Setup
         id: setup
@@ -124,12 +133,10 @@ jobs:
 
       - name: Save cache sql directory
         id: cache-sql
-        uses: actions/cache/save@v3.3.2
+        uses: actions/cache/save@v4.0.0
         with:
           path: sql/
           key: sql-${{ hashFiles('sql/') }}
-          restore-keys: |
-            sql-${{ hashFiles('sql/') }}
 
       - name: Save cache root
         id: cache-root
@@ -140,5 +147,10 @@ jobs:
             .github/workflows/run.yaml
             fuga.sql
           key: root-${{ hashFiles('.github/workflows/run.yaml', '.github/actions/setup/action.yaml', 'fuga.sql') }}
-          restore-keys: |
-            root-${{ hashFiles('.github/workflows/run.yaml', '.github/actions/setup/action.yaml', 'fuga.sql') }}
+
+      - name: Save cache sql file
+        id: cache-sql-file
+        uses: actions/cache/restore@v4.0.0
+        with:
+          path: "*.sql"
+          key: sql-${{ hashFiles('*.sql') }}
