--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -15,7 +15,6 @@ jobs:
       sql-cache-hit: ${{ steps.cache-sql.outputs.cache-hit }}
       root-cache-hit: ${{ steps.cache-sql.outputs.cache-root }}
     steps:
-
       - name: echo vars
         run: echo ${{ vars.HOGE }}
 
@@ -76,12 +75,6 @@ jobs:
         directory:
           - sql
     steps:
-
-      - name: echo vars and env
-        run: |
-          echo ${{ vars.HOGE }}
-          echo ${{ env.HOGE }}
-
       - name: Checkout the repository
         uses: actions/checkout@v4.1.1
 
@@ -97,7 +90,7 @@ jobs:
         if: steps.setup.outputs.skip != 'true'
         env:
           GITHUB_HEAD_REF: ${{ github.head_ref }}
-        run: | 
+        run: |
           echo "SQL Plan"
           echo "${{github.ref}}"
           echo "${GITHUB_REF#refs/heads/}"
@@ -105,7 +98,7 @@ jobs:
           if [[ $GITHUB_HEAD_REF =~ (cache)+ ]]; then
             OPTION="-detailed-exitcode"
           fi
-          
+
           echo "terraform plan $OPTION"
   apply:
     if: github.ref == 'refs/heads/main'
@@ -113,6 +106,13 @@ jobs:
       - check_for_changes
       - plan
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - directory: sql
+            environment: staging
+          - directory: manualsql
+            environment: production
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4.0.0
@@ -131,6 +131,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  store-cache:
+    runs-on: ubuntu-latest
+    needs: apply
+    steps:
       - name: Save cache sql directory
         id: cache-sql
         uses: actions/cache/save@v4.0.0
